<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.9">
  <DUT Name="ST_AdvancedTanks" Id="{eae4d67c-e7cd-4c8d-a81c-5ee898aaa3b8}">
    <Declaration><![CDATA[TYPE ST_AdvancedTanks EXTENDS ST_Tanks :
STRUCT
	rPressure : REAL;
END_STRUCT
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>